--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="card">
-    <div class="card-header card-header-danger">
-      <h4 class="card-title">  รายงานผู้ใช้งานระบบ</h4>
+    <div class="card-header "><!--card-header-danger-->
+      <h4 class="card-title">  จัดการผู้ใช้งาน</h4>
     
     </div>
     <div class="card-body">
