--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -14,11 +14,11 @@
                     <div class="col-sm justify-content-start">
                         ข้อมูลผู้ใช้
                     </div>
-                    <div class="col-sm-1 justify-content-end">
+                    <!-- <div class="col-sm-1 justify-content-end">
                         <div class="Edit" (click)="editProfile()">
                         <i class="fa fa-pencil-square-o"></i>
                         </div>
-                    </div>
+                    </div> -->
                     </div>
                 </div>
                 
@@ -98,7 +98,7 @@
                     </div>
                     </div>
 
-                    <div *ngIf="EditStatus" class="userEdit">
+                    <!-- <div *ngIf="EditStatus" class="userEdit">
                     <form [formGroup]="UserInfoForm" (ngSubmit)="SaveUserInfo()">        
                         <div class="row">
                         <div class="col-sm-6">
@@ -165,7 +165,7 @@
                         <button type="submit" class="btn btn-add">บันทึก</button>
                         <button type="button" class="btn btn-danger" (click)="cancelEdit()">ยกเลิก</button>
                     </form>
-                    </div>
+                    </div> -->
                 </div>
                 </div>
             </div>
