--- a/src/app/view/thaicounty/thaicounty.component.css
+++ b/src/app/view/thaicounty/thaicounty.component.css
@@ -2,7 +2,8 @@
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  bottom: -50px;
+  padding: 30px;
+ 
 }
 .card-header{
   position: relative;
@@ -29,6 +30,11 @@ table {
   border-collapse: collapse;
 }
 
+h4{
+  font-family: 'Sarabun',sans-serif;
+  font-weight: 900;
+  padding: 0 0 20px;
+}
 th, td {
   padding: 8px;
   text-align: left;
