--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -8,18 +8,19 @@
 }
 
 .dropdown-menu {
-    display: none;
+    visibility: hidden;
     position: absolute;
     left: -130px;
     opacity: 0;
     transform: scale(0);
-    transition: opacity 1s ease-in-out, transform 0.2s ease-in-out;
+    transition: opacity 1s ease-in-out, transform 0.2s ease-in-out, visibility 0s 1s;
     font-family: 'Sarabun',sans-serif;
   }
 .dropdown-menu.show{
-    display: block;
+    visibility: visible;
     opacity: 1;
     transform: scale(1);
+    transition-delay: 0s;
     font-family: 'Sarabun',sans-serif;
 }
 
