--- a/src/app/layouts/auth-layout/register/register.component.html
+++ b/src/app/layouts/auth-layout/register/register.component.html
@@ -17,7 +17,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12" style="padding-right: 0;">
+          <div class="col-sm-6" style="padding-right: 0;">
             <div class="form-group">
               <label for="password" style="font-size: 16px;">รหัสผ่าน</label>
               <input type="password" id="password" formControlName="password" required placeholder="กรอกรหัสผ่านของคุณ">
@@ -27,7 +27,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12" style="padding-right: 0;">
+          <div class="col-sm-6" style="padding-right: 0;">
             <div class="form-group">
               <label for="confirmpassword" style="font-size: 16px;">ยืนยัน รหัสผ่าน</label>
               <input type="password" id="confirmpassword" formControlName="confirmpassword" required
@@ -90,7 +90,7 @@
           </div>
           <div class="col-sm-12" style="padding-right: 0;">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-sm-3">
                 <div class="form-group">
                   <label for="province" style="font-size: 16px;">จังหวัด</label>
                   <select class="form-select" formControlName="province"
@@ -100,7 +100,7 @@
                 </div>
               </div>
 
-              <div class="col-sm-6" style="padding-left: 0;">
+              <div class="col-sm-3" style="padding-left: 0;">
                 <div class="form-group">
                   <label for="amphure" style="font-size: 16px;">อำเภอ/เขต</label>
                   <select class="form-select" formControlName="amphure" (change)="onAmphuresChange($event.target.value)"
@@ -110,7 +110,7 @@
                 </div>
               </div>
 
-              <div class="col-sm-6">
+              <div class="col-sm-3">
                 <div class="form-group">
                   <label for="tambon" style="font-size: 16px;">ตำบล/แขวง</label>
                   <select class="form-select" formControlName="tambon" (change)="onTambonChange($event.target.value)"
@@ -120,7 +120,7 @@
                 </div>
               </div>
 
-              <div class="col-sm-6" style="padding-left: 0;">
+              <div class="col-sm-3" style="padding-left: 0;">
                 <div class="form-group">
                   <label for="postCode" style="font-size: 16px;">รหัสไปรษณีย์</label>
                   <select class="form-select" formControlName="postCode"
@@ -136,7 +136,7 @@
 
 
         <div class="row box">
-          <div class="col-sm-12" style="padding-right: 0;">
+          <div class="col-sm-6" style="padding-right: 0;">
             <div class="form-group">
               <label for="phone" style="font-size: 16px;">เบอร์โทรศัพท์</label>
               <input type="tel" id="phone" formControlName="phone" required placeholder="กรอกเบอร์โทรศัทพ์ของคุณ">
@@ -146,9 +146,28 @@
               </div>
             </div>
           </div>
+          <div class="col-sm-6" style="padding-right: 0;">
+
+            <div class="title">อัปโหลดรูปภาพโปรไฟล์</div>
+            <div class="uploadPicture"[ngStyle]="{'display': imageSrc ? 'none' : 'flex'}">
+              <div class="text-upload">
+                <i class="fa fa-image"></i>
+                <div>อัปโหลดไฟล์ หรือ โยนไฟล์ลงที่นี้</div>
+              </div>
+
+              <input type="file"  id="profileImage" formControlName="profileImage" 
+              accept="application/png,image/*" (change)="onFileUploadImgChange($event)" #fileInput>
+
+            </div>
+            <div class="profile-image-container" *ngIf="imageSrc">
+              <img [src]="imageSrc" alt="Profile Img" class="profile-image">
+              <i class="fa-regular fa-trash-can positionTrashCan" (click)="deletedFileUpload(fileInput)"></i>
+            </div>
+
+          </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-sm-12" style="padding-right: 0;">
 
             <div class="title">อัปโหลดรูปภาพโปรไฟล์</div>
@@ -167,13 +186,13 @@
               <i class="fa-regular fa-trash-can positionTrashCan" (click)="deletedFileUpload(fileInput)"></i>
             </div>
 
-          </div>
+          </div> -->
 
 
 
 
 
-        </div>
+        <!-- </div> -->
 
         <button type="submit" class="btn-create-account">สร้างบัญชี</button>
       </form>
