--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -23,6 +23,7 @@
 h4{
   font-family: 'Sarabun',sans-serif;
   font-weight: 900;
+  padding: 0 0 20px;
 }
 .province-label {
   font-size: 18px;
@@ -46,7 +47,7 @@ h4{
   position: relative;
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 20px;
   background-color:white !important;
   width: 100%;
   height: 150px;
@@ -113,8 +114,8 @@ label{
 
 .dropdown-scroller::-webkit-scrollbar {
   z-index: 10;
- /* display: none; */
- visibility: hidden;
+  display: none; 
+  /* visibility: hidden;  */
 } 
 /* .dropdown-content {
   -ms-overflow-style: none;  
@@ -315,6 +316,26 @@ height: 32px;
   background: white;
   border-radius: 10px ;
   padding: 30px;
+  height: 100%;
+}
+.donutChartBG{
+  background: white;
+  height: 150px;
+  border-radius: 10px ;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+}
+.chart-container {
+  width: 100%; /* กำหนดขนาดของ container */
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#myDonutChart{
+  height: 140px !important;
+  width: 140px;
 }
 canvas {
   max-width: 100%;
@@ -377,7 +398,7 @@ justify-content: flex-end;
 } */
 .Box1, .Box2, .Box3, .Box4 {
   width: auto;
-  height: 151px;
+  /* height: 151px; */
   border-radius: 10px;
   /* background-color: rgb(255, 209, 0); */
 }  
@@ -420,8 +441,8 @@ justify-content: flex-end;
   font-size: 1rem;
 }
 :host ::ng-deep .btn-add{
-  color: #fff;
-  background-color: #24a0ed;/*#000dc2ef  */
+  color: rgb(255, 255, 255);
+  background-color: rgb(36, 160, 237);/*#000dc2ef  */
   border-color: #24a0ed85;;
   /* box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd; */
   font-family: 'Sarabun', sans-serif;
