--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -1,8 +1,8 @@
 <div class="main-content">
   <div class="card">
-    <div class="card-header card-header-danger">
+    <div class="card-header"> <!-- card-header-danger-->
       <h4 class="card-title">รายงานผู้ใช้งานระบบ</h4>
-      <button (click)="exportToExcel()" class="btn btn-primary" style="float: right;">Export to Excel</button>
+      <button (click)="exportToExcel()" class="btn btn-add" style="float: right;">Export to Excel</button>
     </div>
     <div class="card-body">
       <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
@@ -25,7 +25,7 @@
             <td class="small-name">{{ users.firstname }}</td>
             <td class="small-name">{{ users.email }}</td>
             <td class="small-name">{{ users.role }}</td>
-            <td class="small-name">{{ users.date }}</td>
+            <td class="small-name">{{ users.date  }}</td>
             <td class="small-name">{{ users.time }}</td>
             <td class="small-cell-text">
               <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;">
