--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -17,13 +17,13 @@
         <div class="uploadFilePDF">
             <label for="fileInput" style="padding: 0 0 0 15px;">อัปโหลดไฟล์ของคุณ</label>
              <div class="nextPage" (click)="onSignPage()">
-                ไปที่หน้าการเซ็น<i class="fa fa-arrow-right"></i>
+                ไปที่หน้าการอัปโหลด<i class="fa fa-arrow-right"></i>
              </div>
-            <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*"
+            <!-- <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*"
                 (change)="onFileSelected($event)" style="font-size: 14px;">
             <button type="button" (click)="clearFileInput()"
                 style="position: relative;left:-25px; border: none; background-color: transparent; z-index: 10;"><i
-                    class="fa fa-times"></i></button>
+                    class="fa fa-times"></i></button> -->
         </div>
         <!-- <button (click)="addDetail()">เพิ่มหน้าใหม่</button> -->
         <!--หน้าในการแสดง ไฟล์ pdf ที่อัปโหลดมา-->
