--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -1,6 +1,10 @@
 <div class="main-content">
   <div class="card" style="align-items: center;" >
-
+    <div>
+      <!-- <button type="button" class="close" data-dismiss="modal" aria-label="fa-arrow-left" (click)="BackRoot()">
+        <span aria-hidden="true">&times;</span>
+    </button> -->
+    </div>
     <div class="uploadFilePDF">
       <label for="fileInput" style="padding: 0 0 0 15px;">อัปโหลดไฟล์ของคุณ</label>
       <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*"
