--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -17,8 +17,8 @@
               <th class="small-name">วันที่สร้าง</th>
               <th class="small-name">เวลาที่สร้าง</th>
               <!-- <th class="small-cell">ตำเเหน่ง</th> -->
-              <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
-                  class="fa fa-gear"></i></th>
+              <!-- <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
+                  class="fa fa-gear"></i></th> -->
             </tr>
           </thead>
           <tbody>
@@ -30,12 +30,12 @@
               <td class="small-name"> {{ users.createdDate }} </td>
               <td class="small-name"> {{ users.createdTime }} </td>
               <!-- <td class="small-cell"> {{ users.role }} </td> -->
-              <td class="small-cell-text">
+              <!-- <td class="small-cell-text">
               <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
                 <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
                   class="fa fa-file-text-o ModalIcon "></i>
               </button>
-            </td>
+            </td> -->
               </tr>
             </tbody>
         </table>
