--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -36,7 +36,7 @@
     <div class="BoxTotal" style="padding: 0 ; ">
 
       <div class="row" style="padding: 0 ;">
-        <div class="col-md-8" style="padding: 0 15px 0 0 ;">
+        <div class="col-md-6" style="padding: 0 15px 0 0 ;">
           <div class="filter-container">
             <div class="row">
               <div class="col-md-3">
@@ -99,9 +99,9 @@
      
            </div>
         </div>
-        <div class="col-md-4" style="padding-right: 0;">
+        <div class="col-md-6" style="padding-right: 0;">
             <div class="donutChartBG">
-                <h4>ผู้ใช้งาน</h4>
+                <h4 width="90px">จำนวนการเซ็น</h4>
                 <div class="chart-container">
                   <canvas id="myDonutChart" ></canvas>
                 </div>
