--- a/src/app/view/map/map.component.css
+++ b/src/app/view/map/map.component.css
@@ -1,7 +1,7 @@
   #map {
     position: relative;
     display: flex;
-    height: 399px;
+    height: 88%;
     width: auto;
    margin-top: 0;
     border-radius: 5px;
