--- a/src/app/view/thaicounty/thaicounty.component.html
+++ b/src/app/view/thaicounty/thaicounty.component.html
@@ -10,6 +10,7 @@
       <h4 class="card-title" style="font-weight: 900;">
      รายงานการใช้เอกสาร
       </h4>
+      <button class="btn btn-add">Export to excel</button>
     </div>
 
 
