--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-header "><!--card-header-danger-->
       <h4 class="card-title">  จัดการผู้ใช้งาน</h4>
-    
+      <button class="btn btn-add">สร้างผู้ใช้</button>
     </div>
     <div class="card-body">
       <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
