--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -1,6 +1,6 @@
     <div class="main-content">
     <div class="container-fluid">
-        <div class="card">
+        <!-- <div class="card">
         <div class="card-header card-header-danger">
             <h4 class="card-title">การจัดการผู้ใช้งาน</h4>
         </div>
@@ -14,11 +14,11 @@
                     <div class="col-sm justify-content-start">
                         ข้อมูลผู้ใช้
                     </div>
-                    <!-- <div class="col-sm-1 justify-content-end">
+                     <div class="col-sm-1 justify-content-end">
                         <div class="Edit" (click)="editProfile()">
                         <i class="fa fa-pencil-square-o"></i>
                         </div>
-                    </div> -->
+                    </div> 
                     </div>
                 </div>
                 
@@ -98,7 +98,7 @@
                     </div>
                     </div>
 
-                    <!-- <div *ngIf="EditStatus" class="userEdit">
+                    <div *ngIf="EditStatus" class="userEdit">
                     <form [formGroup]="UserInfoForm" (ngSubmit)="SaveUserInfo()">        
                         <div class="row">
                         <div class="col-sm-6">
@@ -165,7 +165,7 @@
                         <button type="submit" class="btn btn-add">บันทึก</button>
                         <button type="button" class="btn btn-danger" (click)="cancelEdit()">ยกเลิก</button>
                     </form>
-                    </div> -->
+                    </div> 
                 </div>
                 </div>
             </div>
@@ -180,6 +180,153 @@
             </div>
             </div>
         </div>
+        </div> -->
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+
+                    <div class="col-md-3">
+                        <div class="card-user">
+                            <div class="card-avatar">
+                                <a href="javascript:void(0)">
+                                <img class="img" [src]="profileImgUrl" />
+                                </a>
+                            </div>
+
+                            <div class="card-info">
+                                <div class="row">
+                                    ระดับผู้ใช้งาน :
+                                   </div>
+                                <div class="row">
+                                    ชื่อ :{{ UserData?.firstname }}  นามสกุล :{{user?.lastname}}
+                                </div>
+                                <div class="row">
+                                    ตำแหน่ง : 
+                                </div>
+                             </div>
+                        </div>
+                   
+                    </div>
+                    
+                    <div class="col-md-9">
+                        <div class="userInfo">
+                            <div class="title">
+                               <h4> ข้อมูลผู้ใช้</h4>
+                               <button>แก้ไขข้อมูลส่วนตัว</button>
+                            </div>
+                            <div class="user-content">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="">ชื่อ</label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+        
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="">นามสกุล</label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="group-info">
+                                    <div class="title-info">
+                                        <h4>ข้อมูลบริษัท/องค์กร</h4>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <label for="">บริษัท/องค์กร</label>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <label for="">ที่อยู่</label>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control">
+                                        </div>
+                                        
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <label for=""></label>
+                                        </div>
+                                        <div class="col-md-5">
+                                            <input type="text" class="form-control" placeholder="ตำบล">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <input type="text" class="form-control" placeholder="อำเภอ">
+                                        </div>
+                                     
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <label for=""></label>
+                                        </div>
+                                        <div class="col-md-5">
+                                            <input type="text" class="form-control" placeholder="จังหวัด">
+                                        </div>
+                                  
+                                        <div class="col-md-4">
+                                            <input type="text" class="form-control"  placeholder="รหัสไปรษณีย์">
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="title-info">
+                                            <h4>ข้อมูลติดต่อ</h4>
+                                        </div>
+                                    </div>
+                                    
+                                </div>
+                                <div class="row">
+
+                                    <div class="col-md-3">
+                                        <label for="">เบอร์โทร</label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="">อีเมล</label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="">รหัสผ่าน</label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="">ยืนยันรหัสผ่าน</label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                             
+                               
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     </div>
