--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -4,6 +4,9 @@
   height: 100%;
   font-family: 'Sarabun',sans-serif;
 }
+.card{
+  padding: 20px;
+}
 
 
 
@@ -16,7 +19,13 @@
 
 .card-header {
   padding: 20px;
-  background-color: rgb(255, 209, 0);
+  background-color: rgb(255, 209, 0,0.2);
+
+  display: flex;
+  justify-content: space-between ;
+  align-items: center;
+  margin: 0 ;
+  border-radius: 10px;
 
 }
 
