--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -3,7 +3,7 @@
 
 
         <div class="card">
-          <div class="card-header card-header-danger">
+          <div class="card-header">
             <h4 class="card-title">การจัดการผู้ใช้งาน</h4>
           </div>
 
