--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-header"> <!-- card-header-danger-->
       <h4 class="card-title">รายงานผู้ใช้งานระบบ</h4>
-      <button (click)="exportToExcel()" class="btn btn-add" style="float: right;">Export to Excel</button>
+      <button (click)="exportToExcel()" class="btn btn-add" style="float: right;">Export to excel</button>
     </div>
     <div class="card-body">
       <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
