--- a/src/app/view/thaicounty/thaicounty.component.css
+++ b/src/app/view/thaicounty/thaicounty.component.css
@@ -7,7 +7,13 @@
 }
 .card-header{
   position: relative;
-  background-color: transparent;
+  background-color: rgb(255,209,0,0.2);
+
+  display: flex;
+  justify-content: space-between ;
+  align-items: center;
+  margin: 0 ;
+  border-radius: 10px;
 }
 
 .main-content{
@@ -33,7 +39,7 @@ table {
 h4{
   font-family: 'Sarabun',sans-serif;
   font-weight: 900;
-  padding: 0 0 20px;
+  /* padding: 0 0 20px; */
 }
 th, td {
   padding: 8px;
