--- a/src/app/layouts/auth-layout/register/register.component.html
+++ b/src/app/layouts/auth-layout/register/register.component.html
@@ -150,7 +150,6 @@
 
         <div class="row">
           <div class="col-sm-12" style="padding-right: 0;">
-
             <div class="title">อัปโหลดรูปภาพโปรไฟล์</div>
             <div class="uploadPicture">
               <div class="text-upload">
@@ -158,21 +157,16 @@
                 <div>อัปโหลดไฟล์ หรือ โยนไฟล์ลงที่นี้</div>
               </div>
 
-              <input type="file"  id="profileImage" formControlName="profileImage" 
-              accept="application/png,image/*" (change)="onFileUploadImgChange($event)" #fileInput>
-
+              <input type="file" id="profileImage" formControlName="profileImage" 
+                     accept="application/png,image/*" 
+                     (change)="onFileUploadImgChange($event)" #fileInput>
             </div>
+
             <div class="profile-image-container" *ngIf="imageSrc">
               <img [src]="imageSrc" alt="Profile Img" class="profile-image">
               <i class="fa-regular fa-trash-can positionTrashCan" (click)="deletedFileUpload(fileInput)"></i>
             </div>
-
           </div>
-
-
-
-
-
         </div>
 
         <button type="submit" class="btn-create-account">สร้างบัญชี</button>
