--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -31,7 +31,7 @@
 
                         <div class="col-sm-6">
                           <div class="Info-text">
-                            ชื่อ : {{ UserData?.employeeId.firstname }} 
+                            ชื่อ : {{ UserData?.employeeId.firstname }}
                           </div>
                         </div>
                         <div class="col-sm-6">
@@ -171,13 +171,13 @@
                                 <input matInput placeholder="อีเมล" type="email">
                               </mat-form-field>
                             </div>
+                            
                             <div class="col-md-12">
                               <mat-form-field class="example-full-width">
                                 <input matInput placeholder="เบอร์โทร" type="text">
                               </mat-form-field>
                             </div>
                       
-  
                         </div>
                         <button type="submit" class="btn btn-add">บันทึก</button>
                         <button type="button" class="btn btn-danger" (click)="cancelEdit()">ยกเลิก</button>
@@ -187,10 +187,6 @@
                   </div>
                 </div>
 
-              
-
-
-
               </div>
               <div class="col-sm-4" style="border: 1px solid black; border-radius: 5px; padding-left: 0; padding-right: 0; ">
                 <div class="card-profile">
@@ -199,7 +195,12 @@
                       <img class="img" [src]="profileImgUrl" />
                     </a>
                   </div>
-
+                  <div *ngIf="!EditStatus" class="user-data" class="Info-Preview-name">
+                     {{ UserData?.employeeId.firstname }}  {{ UserData?.employeeId.lastname }}
+                  </div>
+                  <div class="Info-Preview">
+                     {{ UserData?.role }}
+                  </div>
                 </div>
 
               </div>
