--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -14,9 +14,9 @@
             <th class="small-name">ระดับผู้ใช้งาน</th>
             <th class="small-cell">วันที่เข้าใช้งาน</th>
             <th class="small-cell">เวลาที่เข้าใช้งาน</th>
-            <th class="small-cell" style="color: black; font-size: 16px; text-align: center;">
+            <!-- <th class="small-cell" style="color: black; font-size: 16px; text-align: center;">
               <i class="fa fa-gear"></i>
-            </th>
+            </th> -->
           </tr>
         </thead>
         <tbody>
@@ -27,11 +27,11 @@
             <td class="small-name">{{ users.role }}</td>
             <td class="small-name">{{ users.date }}</td>
             <td class="small-name">{{ users.time }}</td>
-            <td class="small-cell-text">
+            <!-- <td class="small-cell-text">
               <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;">
                 <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top" class="fa fa-file-text-o ModalIcon"></i>
               </button>
-            </td>
+            </td> -->
           </tr>
         </tbody>
       </table>
