--- a/src/app/layouts/auth-layout/forget-password/forget-password.component.html
+++ b/src/app/layouts/auth-layout/forget-password/forget-password.component.html
@@ -1,21 +1,22 @@
-<div class="forgot-password-card">
-  <h2>ลืมรหัสผ่าน</h2>
-  <form [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
+<div class="back-button-container">
+  <button class="btn btn-secondary" (click)="goBack()">ย้อนกลับไปยังโปรไฟล์</button>
+</div>
+
+<div class="change-password-card">
+  <h2>เปลี่ยนรหัสผ่าน</h2>
+  <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="email" style="font-size: 16px;">อีเมล</label>
-      <input type="email" id="email" formControlName="email" required placeholder="กรอกอีเมลของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
+      <label for="oldPassword" style="font-size: 16px;">รหัสผ่านเก่า</label>
+      <input type="password" id="oldPassword" formControlName="oldPassword" required placeholder="กรอกรหัสผ่านเก่าของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
     </div>
     <div class="form-group">
-      <label for="password" style="font-size: 16px;">รหัสผ่านใหม่</label>
-      <input type="password" id="password" formControlName="password" required placeholder="กรอกรหัสผ่านของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
+      <label for="newPassword" style="font-size: 16px;">รหัสผ่านใหม่</label>
+      <input type="password" id="newPassword" formControlName="newPassword" required placeholder="กรอกรหัสผ่านใหม่ของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
     </div>
     <div class="form-group">
-      <label for="confirmpassword" style="font-size: 16px;">ยืนยันรหัสผ่าน</label>
-      <input type="password" id="confirmpassword" formControlName="confirmpassword" required placeholder="กรอกรหัสผ่านของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
+      <label for="confirmNewPassword" style="font-size: 16px;">ยืนยันรหัสผ่านใหม่</label>
+      <input type="password" id="confirmNewPassword" formControlName="confirmNewPassword" required placeholder="ยืนยันรหัสผ่านใหม่ของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
     </div>
     <button type="submit" class="btn-submit">ยืนยัน</button>
   </form>
-  <div class="footer-links">
-    <a style="font-size: 14px; color: #24a0ed;"> มีบัญชีอยู่เเล้ว? </a> &nbsp; <a routerLink="/login" class="login-link" style="font-size: 14px;">เข้าสู่ระบบ</a>
-  </div>
 </div>
