--- a/src/app/layouts/auth-layout/forget-password/forget-password.component.css
+++ b/src/app/layouts/auth-layout/forget-password/forget-password.component.css
@@ -80,3 +80,45 @@
   .btn-secondary:hover {
     background-color: #5a6268;
   }
+
+  .login-card {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* text-align: center2;
+    font-size: 16px;
+    font-family:  'Sarabun', sans-serif; */
+  }
+  
+  .login-card h2 {
+    margin-bottom: 20px;
+    color: #000000;
+
+    text-align: center;
+    font-size: 26px;
+    font-family:  'Sarabun', sans-serif;
+  }
+
+  .footer-links {
+    /* display: flex; */
+    /* justify-content: space-between; */
+    margin-top: 15px;
+    text-align: center;
+  }
+  
+  .forgot-password-link, .register-link {
+    font-size: 0.8em;
+    color:  #24a0ed;
+    text-decoration: none;
+  }
+  
+  .forgot-password-link:hover, .register-link:hover {
+    text-decoration: underline;
+  }
