--- a/src/app/layouts/auth-layout/forget-password/forget-password.component.html
+++ b/src/app/layouts/auth-layout/forget-password/forget-password.component.html
@@ -1,6 +1,7 @@
-<div class="back-button-container">
+<div class="login-card">
+<!-- <div class="back-button-container">
   <button class="btn btn-secondary" (click)="goBack()">ย้อนกลับไปยังโปรไฟล์</button>
-</div>
+</div> -->
 
 <div class="change-password-card">
   <h2>เปลี่ยนรหัสผ่าน</h2>
@@ -19,4 +20,9 @@
     </div>
     <button type="submit" class="btn-submit">ยืนยัน</button>
   </form>
+</div>
+<div class="footer-links">
+  <!-- <a (click)="openFogetPassword()" class="forgot-password-link"  style="font-size: 14px;">ลืมรหัสผ่าน</a> -->
+  <a (click)="goBack()" class="register-link" style="font-size: 14px;">ย้อนกลับไปยังโปรไฟล์</a>
+</div>
 </div>
