--- a/src/app/layouts/auth-layout/login/login.component.css
+++ b/src/app/layouts/auth-layout/login/login.component.css
@@ -68,9 +68,10 @@
   }
   
   .footer-links {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     margin-top: 15px;
+    text-align: center;
   }
   
   .forgot-password-link, .register-link {
