--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -19,9 +19,8 @@
                       </div>
                       <div class="col-sm-1 justify-content-end">
                         <div class="Edit" (click)="editProfile()">
-                          <i class="fa fa-pencil-square-o" ></i>
+                          <!-- <i class="fa fa-pencil-square-o" ></i> -->
                         </div>
-                        
                       </div>
                     </div>
                   </div>
