--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -1,5 +1,5 @@
 <div class="main-content">
-  <div class="card" style="align-items: center;" >
+  <div class="card" style="align-items: center;">
     <div>
       <!-- <button type="button" class="close" data-dismiss="modal" aria-label="fa-arrow-left" (click)="BackRoot()">
         <span aria-hidden="true">&times;</span>
@@ -14,13 +14,27 @@
         <i class="fa fa-times"></i>
       </button>
     </div>
-    <div class="card-body" >
+    <div class="card-body">
       <div class="col-sm-12" *ngIf="loading">
-        <div>จำนวนหน้า : {{totalPage}} 
-          <input class="form-control"
-            style="border: none;" type="number" [(ngModel)]="pageVariable" />
+        <div>จำนวนหน้า: {{ totalPage }}</div>
+        <div class="d-flex align-items-center justify-content-center">
+          <button class="btn-custom" type="button" (click)="prevPage()">
+            <i class="fa fa-arrow-left"></i>
+          </button>
+        
+          <input
+            class="form-control page-display"
+            type="number"
+            [(ngModel)]="pageVariable"
+            [min]="1"
+            [max]="totalPage"
+            (change)="onPageChange()"
+          />
+        
+          <button class="btn-custom" type="button" (click)="nextPage()">
+            <i class="fa fa-arrow-right"></i>
+          </button>
         </div>
-
 
 
         <button *ngIf="step == 0" (click)="choseTypeSignature('pin')" style="height: 40px;" type="button"
